Fix spacing issue with Investors page news search

--- a/src/components/05-pages/investors/investors.scss
+++ b/src/components/05-pages/investors/investors.scss
@@ -119,6 +119,10 @@
       max-width: 296px;
     }
 
+    @media (max-width: $mq-max-860) {
+      margin-bottom: 64px;
+    }
+
     @media (min-width: $mq-min-860) {
       float: right;
       margin-top: 96px;
